Fixes some z-index issues

--- a/styles/Agreements.module.css
+++ b/styles/Agreements.module.css
@@ -25,7 +25,7 @@
     padding-left: 30px;
     box-sizing: border-box;
     padding-bottom: 0;
-    z-index: 100;
+    z-index: 10;
   }
 
   .menu ul {
@@ -41,7 +41,7 @@
   .menu li {
     display: inline-block;
     cursor: pointer;
-    width: 140px;
+    width: 128px;
     text-align: center;
     padding-bottom: 2px;
     margin-right: 20px;
